Fix default spacing for buttons

--- a/src/generic/generic-component-button/generic-component-button.scss
+++ b/src/generic/generic-component-button/generic-component-button.scss
@@ -11,6 +11,8 @@ $ecl-button-default-color: $ecl-color-primary !default;
 $ecl-button-default-border-color: $ecl-color-primary !default;
 $ecl-button-default-background-color: transparent !default;
 
+$ecl-button-horizontal-inner-spacing: 0 !default;
+$ecl-button-vertical-inner-spacing: 0 !default;
 $ecl-button-padding: $ecl-button-vertical-inner-spacing
   $ecl-button-horizontal-inner-spacing !default;
 
